# melian

./: .gitignore  .gitmodules  Dockerfile  HACKING.md  INSTALL.md  Makefile.am  Makefile.in  README.md  configure  configure.ac  protocol.h
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
clients/c/: client.c  client.h  melian-client.c
clients/js/src/: MelianClient.js
clients/js/tests/: client.test.js
clients/perl/: README.md
clients/php/Melian/src/: Client.php
clients/php/Melian/tests/: ClientTest.php
melbench/: .gitignore  Makefile  README.md  TODO.md
melbench/src/: args.c  args.h  evloop.c  evloop.h  hist.c  hist.h  kq.c  main.c  net.c  net.h  proto.h  proto_melian.c  proto_redis.c  stats.h  timeutil.c  timeutil.h
server/: arena.c  config.c  config.h  cron.c  cron.h  data.c  data.h  db.c  db.h  event_loop.c  event_loop.h  event_loop_libevent.c  event_loop_uring.c  hash.c  hash.h  log.c  melian-server.c  server.c  server.h  server_io.h  server_uring.c  status.c  status.h  util.c  util.h
tests/: test.h  test_arena.c  test_data.c  test_hash.c  test_log.c  test_protocol.c  test_util.c
utils/benchmarks/: benchmark.pl  benchmark_cbor_json.pl  benchmark_table2_vs_redis.pl  json_row_bench.c
utils/config/: melian.json
